syntax = "proto3";

package product ;

service ProductService {
    rpc CreateProduct(createProductRequest) returns (createProductResponse) {}
    rpc GetProductById(getProductByIdRequest) returns (getProductByIdResponse){}
}



message createProductRequest {
    string name=1;
    int32 price=2;
    int32 quantity=3;

}

message createProductResponse {
    int32 id = 1;
    string name=2;
    int32 price=3;
    int32 quantity=4;
}


message getProductByIdRequest {
    int32 id=1;
}

message getProductByIdResponse {
    Product product  =1;

}

message Product {
    int32 id =1;
    string name=2;
    int32 price=3;
    int32 quantity=4;
}


